# visrag

./: .gitignore  Makefile  README.md  application.py  pyproject.toml  requirements.txt
api/: routes.py
dev-env/: Dockerfile  docker-compose.yaml
env/secrets/: secrets.env.template
src/core/: contracts.py
src/providers/: openai_client.py  openclip_embedder.py  qdrant_store.py  settings.py
src/services/: indexer.py  retriever.py
tests/: test_health.py
